Test_direct/new_eta_3/slurm-61202.out
bash: cannot set terminal process group (60504): Inappropriate ioctl for device
bash: no job control in this shell
Removing compiler version 2023.1.0
Use `module list` to view any remaining dependent modules.
  Load "debugger" to debug DPC++ applications with the gdb-oneapi debugger.
  Load "dpl" for additional DPC++ APIs: https://github.com/oneapi-src/oneDPL
Removing mkl version 2023.1.0
Use `module list` to view any remaining dependent modules.


    _          _         _       _
 __/\\___    _/\\___    /\\__  _/\\___
(_     __)) (_   _ _)) /    \\(_ __ __))
 /  _  \\    /  |))\\ _\  \_// /  |_| \\
/:.(_)) \\_ /:. ___//// \:.\  /:.  _   \\
\  _______//\_ \\    \\__  /  \___| |  //
 \//          \//       \\/          \//



   -- Quantum  Package  Shell --

Loading compiler version 2023.1.0
  Load "debugger" to debug DPC++ applications with the gdb-oneapi debugger.
  Load "dpl" for additional DPC++ APIs: https://github.com/oneapi-src/oneDPL
Loading mkl version 2023.1.0
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/new_eta_3/PROGRAM_bayesian_optimization_direct_test.py", line 10, in <module>
    data_big = np.loadtxt('datafile_big_scan.dat')
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nfs/home/jalberola/.local/lib/python3.11/site-packages/numpy/lib/npyio.py", line 1373, in loadtxt
    arr = _read(fname, dtype=dtype, comment=comment, delimiter=delimiter,
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nfs/home/jalberola/.local/lib/python3.11/site-packages/numpy/lib/npyio.py", line 992, in _read
    fh = np.lib._datasource.open(fname, 'rt', encoding=encoding)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nfs/home/jalberola/.local/lib/python3.11/site-packages/numpy/lib/_datasource.py", line 193, in open
    return ds.open(path, mode, encoding=encoding, newline=newline)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nfs/home/jalberola/.local/lib/python3.11/site-packages/numpy/lib/_datasource.py", line 533, in open
    raise FileNotFoundError(f"{path} not found.")
FileNotFoundError: datafile_big_scan.dat not found.
cp: cannot stat 'Optimal_LB': No such file or directory
cp: cannot stat 'Optimal_EI': No such file or directory
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
awk: cmd. line:1: BEGIN {print 0.0068146891 - }
awk: cmd. line:1:                             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/new_eta_3/PROGRAM_bayesian_optimization_direct_test.py", line 9, in <module>
    data = np.loadtxt('datafile.dat')
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nfs/home/jalberola/.local/lib/python3.11/site-packages/numpy/lib/npyio.py", line 1373, in loadtxt
    arr = _read(fname, dtype=dtype, comment=comment, delimiter=delimiter,
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nfs/home/jalberola/.local/lib/python3.11/site-packages/numpy/lib/npyio.py", line 1016, in _read
    arr = _load_from_filelike(
          ^^^^^^^^^^^^^^^^^^^^
ValueError: the number of columns changed from 7 to 8 at row 2; use `usecols` to select a subset and avoid this error
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? awk: cmd. line:1: BEGIN {print 0.0068146891 - }
awk: cmd. line:1:                             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/new_eta_3/PROGRAM_bayesian_optimization_direct_test.py", line 9, in <module>
    data = np.loadtxt('datafile.dat')
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nfs/home/jalberola/.local/lib/python3.11/site-packages/numpy/lib/npyio.py", line 1373, in loadtxt
    arr = _read(fname, dtype=dtype, comment=comment, delimiter=delimiter,
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nfs/home/jalberola/.local/lib/python3.11/site-packages/numpy/lib/npyio.py", line 1016, in _read
    arr = _load_from_filelike(
          ^^^^^^^^^^^^^^^^^^^^
ValueError: the number of columns changed from 7 to 8 at row 3; use `usecols` to select a subset and avoid this error
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? awk: cmd. line:1: BEGIN {print 0.0068146891 - }
awk: cmd. line:1:                             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/new_eta_3/PROGRAM_bayesian_optimization_direct_test.py", line 9, in <module>
    data = np.loadtxt('datafile.dat')
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nfs/home/jalberola/.local/lib/python3.11/site-packages/numpy/lib/npyio.py", line 1373, in loadtxt
    arr = _read(fname, dtype=dtype, comment=comment, delimiter=delimiter,
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nfs/home/jalberola/.local/lib/python3.11/site-packages/numpy/lib/npyio.py", line 1016, in _read
    arr = _load_from_filelike(
          ^^^^^^^^^^^^^^^^^^^^
ValueError: the number of columns changed from 7 to 8 at row 4; use `usecols` to select a subset and avoid this error
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? awk: cmd. line:1: BEGIN {print 0.0068146891 - }
awk: cmd. line:1:                             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/new_eta_3/PROGRAM_bayesian_optimization_direct_test.py", line 9, in <module>
    data = np.loadtxt('datafile.dat')
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nfs/home/jalberola/.local/lib/python3.11/site-packages/numpy/lib/npyio.py", line 1373, in loadtxt
    arr = _read(fname, dtype=dtype, comment=comment, delimiter=delimiter,
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nfs/home/jalberola/.local/lib/python3.11/site-packages/numpy/lib/npyio.py", line 1016, in _read
    arr = _load_from_filelike(
          ^^^^^^^^^^^^^^^^^^^^
ValueError: the number of columns changed from 7 to 8 at row 5; use `usecols` to select a subset and avoid this error
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? awk: cmd. line:1: BEGIN {print 0.0068146891 - }
awk: cmd. line:1:                             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Traceback (most recent call last):
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/new_eta_3/PROGRAM_bayesian_optimization_direct_test.py", line 9, in <module>
    data = np.loadtxt('datafile.dat')
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nfs/home/jalberola/.local/lib/python3.11/site-packages/numpy/lib/npyio.py", line 1373, in loadtxt
    arr = _read(fname, dtype=dtype, comment=comment, delimiter=delimiter,
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nfs/home/jalberola/.local/lib/python3.11/site-packages/numpy/lib/npyio.py", line 1016, in _read
    arr = _load_from_filelike(
          ^^^^^^^^^^^^^^^^^^^^
ValueError: the number of columns changed from 7 to 8 at row 6; use `usecols` to select a subset and avoid this error
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
slurmstepd-cnzen3-4: error: *** JOB 61202 ON cnzen3-4 CANCELLED AT 2025-03-12T11:45:35 ***
